# python-poetry-example

./: cmds  pyproject.toml
src/: main.py
src/greet/: location.py
tests/: test_greet.py
