[tool.poetry]
name = "greet"
version = "0.1.0"
description = ""
authors = ["Luis Mori Guerra <luismorith@gmail.com>"]
readme = "README.md"
packages = [{include = "greet", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
arrow = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
location = "greet.location:greet"